--- a/css/style.css
+++ b/css/style.css
@@ -34,9 +34,9 @@ section {
 
 .logo-block {
   padding: 20px 0; }
-  .logo-block .logo-nespresso {
-    float: right;
-    margin-right: 60%; }
+
+.section-1 {
+  text-align: center; }
 
 .section-2 .text-block {
   margin-left: 50%;
@@ -61,7 +61,7 @@ p {
   line-height: 1.9em; }
 
 p.light {
-  font-family: 'FrutigerNeueLTW1G-Light';
+  font-family: 'FrutigerNeue-Bold';
   color: #919191;
   font-size: 14px;
   margin-bottom: 25px;
@@ -115,14 +115,15 @@ ul.list-info {
         background-position: top center; }
 
 .section-4 {
-  background: rgba(234,218,199,1);
-background: -moz-linear-gradient(left, rgba(234,218,199,1) 0%, rgba(255,255,255,1) 35%, rgba(255,255,255,1) 100%);
-background: -webkit-gradient(left top, right top, color-stop(0%, rgba(234,218,199,1)), color-stop(35%, rgba(255,255,255,1)), color-stop(100%, rgba(255,255,255,1)));
-background: -webkit-linear-gradient(left, rgba(234,218,199,1) 0%, rgba(255,255,255,1) 35%, rgba(255,255,255,1) 100%);
-background: -o-linear-gradient(left, rgba(234,218,199,1) 0%, rgba(255,255,255,1) 35%, rgba(255,255,255,1) 100%);
-background: -ms-linear-gradient(left, rgba(234,218,199,1) 0%, rgba(255,255,255,1) 35%, rgba(255,255,255,1) 100%);
-background: linear-gradient(to right, rgba(234,218,199,1) 0%, rgba(255,255,255,1) 35%, rgba(255,255,255,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eadac7', endColorstr='#ffffff', GradientType=1 ); }
+  background: #eadac7;
+  background: -moz-linear-gradient(left, #eadac7 0%, white 35%, white 100%);
+  background: -webkit-gradient(left top, right top, color-stop(0%, #eadac7), color-stop(35%, white), color-stop(100%, white));
+  background: -webkit-linear-gradient(left, #eadac7 0%, white 35%, white 100%);
+  background: -o-linear-gradient(left, #eadac7 0%, white 35%, white 100%);
+  background: -ms-linear-gradient(left, #eadac7 0%, white 35%, white 100%);
+  background: -webkit-gradient(linear, left top, right top, from(#eadac7), color-stop(35%, white), to(white));
+  background: linear-gradient(to right, #eadac7 0%, white 35%, white 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eadac7', endColorstr='#ffffff', GradientType=1 ); }
   .section-4 h3.title {
     padding: 0 100px;
     margin-bottom: 30px; }
@@ -226,20 +227,17 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eadac7', end
 .tgl-ios + .tgl-btn {
   background: none;
   border-radius: 20rem;
-  padding: 2px;
+  padding: 1px;
   -webkit-transition: all .4s ease;
   -o-transition: all .4s ease;
   transition: all .4s ease;
-  -webkit-box-shadow: inset 0 0 0 1px black;
-  box-shadow: inset 0 0 0 1px black; }
+  border: 1px solid #000; }
   .tgl-ios + .tgl-btn:after {
     border-radius: 2em;
-    background: #fff;
+    background-color: transparent;
     -webkit-transition: left 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275), padding 0.3s ease, margin 0.3s ease;
     -o-transition: left 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275), padding 0.3s ease, margin 0.3s ease;
     transition: left 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275), padding 0.3s ease, margin 0.3s ease;
-    -webkit-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
     background: url(../images/toggle-ico.png) no-repeat;
     background-size: contain; }
   .tgl-ios + .tgl-btn:before {
