--- a/css/style.scss
+++ b/css/style.scss
@@ -38,12 +38,11 @@ section{
 
 .logo-block{
 		padding: 20px 0;
-		.logo-nespresso{
-			float: right;
-			margin-right: 60%;
-		}
 }
 
+.section-1{
+		text-align: center;
+	}
 .section-2{
 	.text-block{
 		margin-left: 50%;
@@ -70,7 +69,7 @@ p{
 	line-height: 1.9em;
 }
 p.light{
-	font-family: 'FrutigerNeueLTW1G-Light';
+	font-family: 'FrutigerNeue-Bold';
 	color: #919191;
 	font-size: 14px;
 	margin-bottom: 25px;
@@ -133,9 +132,14 @@ ul.list-info{
 	}
 }
 .section-4{
-  background-image: -moz-linear-gradient( -177deg, rgb(255,255,255) 27%, rgb(183,122,60) 100%);
-  background-image: -webkit-linear-gradient( -177deg, rgb(255,255,255) 27%, rgb(183,122,60) 100%);
-  background-image: -ms-linear-gradient( -177deg, rgb(255,255,255) 27%, rgb(183,122,60) 100%);
+ background: rgba(234,218,199,1);
+background: -moz-linear-gradient(left, rgba(234,218,199,1) 0%, rgba(255,255,255,1) 35%, rgba(255,255,255,1) 100%);
+background: -webkit-gradient(left top, right top, color-stop(0%, rgba(234,218,199,1)), color-stop(35%, rgba(255,255,255,1)), color-stop(100%, rgba(255,255,255,1)));
+background: -webkit-linear-gradient(left, rgba(234,218,199,1) 0%, rgba(255,255,255,1) 35%, rgba(255,255,255,1) 100%);
+background: -o-linear-gradient(left, rgba(234,218,199,1) 0%, rgba(255,255,255,1) 35%, rgba(255,255,255,1) 100%);
+background: -ms-linear-gradient(left, rgba(234,218,199,1) 0%, rgba(255,255,255,1) 35%, rgba(255,255,255,1) 100%);
+background: linear-gradient(to right, rgba(234,218,199,1) 0%, rgba(255,255,255,1) 35%, rgba(255,255,255,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eadac7', endColorstr='#ffffff', GradientType=1 );
 	h3.title{
 		padding:0 100px;
 		margin-bottom: 30px;
@@ -267,20 +271,21 @@ $g04: #848ea1;
 	+ .tgl-btn {
 		background: none;
 		border-radius: 20rem;
-		padding: 2px;
+		padding: 1px;
 		transition: all .4s ease;
-		//border: 1px solid #e8eae9;
-  		  box-shadow: inset 0 0 0 1px rgba(0,0,0,1);
+		border: 1px solid #000;
+  		  // box-shadow: inset 0 0 0 1px rgba(0,0,0,1);
     	  
 		&:after {
 			border-radius: 2em;
-			background: #fff;
+			// background: #fff;
+			background-color: transparent;
 			transition: left .3s cubic-bezier(
           0.175, 0.885, 0.320, 1.275
         ),
         padding .3s ease, margin .3s ease;
-			box-shadow:
-        0 1px 2px 0 rgba(0,0,0,.2);
+			// box-shadow:
+   //      0 1px 2px 0 rgba(0,0,0,.2);
         background: url(../images/toggle-ico.png) no-repeat;
             background-size: contain;
 		}	
