--- a/css/media.css
+++ b/css/media.css
@@ -24,7 +24,7 @@
  		font-size: 12px;
  	}
 	h3{
-		font-size: 18px;
+		font-size: 32px;
 	}
 	.section-4 ul.list-checkbox li p{
 		font-size: 12px;
@@ -44,6 +44,9 @@
 		width: 640px;
 	}
 	h2{
+		font-size: 25px;
+	}
+    h3{
 		font-size: 25px;
 	}
 	p{
@@ -127,6 +130,7 @@
 		font-size: 12px;
 	}
 	h2{font-size: 25px;}
+    h3{font-size: 25px;}
 	section{
 		padding: 10px 0 5px 0;
 	}
