--- a/css/style.css
+++ b/css/style.css
@@ -79,9 +79,11 @@ h2 {
 
 h3 {
   font-family: 'FrutigerNeue-Bold';
-  font-size: 25px;
-  line-height: 1.9em;
-  text-align: center; }
+  font-size: 32px;
+  line-height: 1.4em;
+  text-align: center;
+  font-weight: 500;
+}
 
 ul.list-info {
   list-style-type: none;
